2001-08-17  Scott S. Goodwin  <scott@scottg.net>

	* tcl/http.tcl: moved rqset to be the last arg passed to
	ns_httpget so it wouldn't break existing code. I should have done
	it that way in the first place.

2001-08-15  Scott S. Goodwin  <scott@scottg.net>

	* tcl/http.tcl: add the rqset param as the second argument to
	ns_httpget, which in turn calls ns_httpsopen and passes the rqset
	to it. The change is for consistency so that you can use cookies
	with ns_httpget as well.

2001-07-16  Scott S. Goodwin  <scott@scottg.net>

	* tcl/http.tcl: you can now do ns_httpopen GET /index.html; the
	script will automatically prepend http://hostname:port/ to the
	url.

2001-06-30  Dossy Shiobara  <scott@scottg.net>

	* nsd/conn.c, tests/api/ns_conn.adp: fixed ns_conn outputheaders
	as per bug #433676 submitted by Yon Derek (yond).

2001-05-22  Scott S. Goodwin  <scott@scottg.net>

	* nsd/conn.c: changed Ns_ConnDriverContext in 4.x to return the
	actual conn-specific, module-specific context back, which is how
	it works in 3.x. For some reason this API call was changed to
	always return NULL, but nsopenssl and potentially other comm
	drivers need to get their conn-specific info back.

2001-04-25  Dossy Shiobara  <dossy@panoptic.com>

	* Implemented [ns_localtime ?tz?] as per "[ #418890 ]
	ns_localtime should accept timezone".

2001-03-15  Dossy Shiobara  <dossy@panoptic.com>

	* include/Makefile.win32 win32/*/Makefile: initial attempts at
	Makefiles suitable for NMAKE for building on Win32

	* include/ns.h: define typedef __int64 INT64 for Win32

2001-03-12  Scott S. Goodwin  <scott@scottg.net>

	* nsmain.c: Segmentation fault when using -g <group> flag: line
	294 should read Ns_GetGid(garg) instead of Ns_GetGid(optarg).

2001-03-12 Jim Davidson

	Initial checkin of AOLserver 4.0 (beta), now supporting vitual
	servers and (finally) removing supporting for Tcl 7.6.
	
2001-03-08  Kris Rehberg

	*** AOLserver 3.3 RELEASED ***

2001-03-08 Jim Davidson
